chore: fix slick-cell ellipsis not showing - tried to use `display: flex` on `.slick-cell` but `ellipsis` does not work when used with `flex`, so we can revert to `display: block` and keep the CSS variable, we'll let the users customize it themselve if they do want to go that route, however they'll need to wrap their slick-cell texts into a span, see this article for more info: https://css-tricks.com/using-flexbox-and-text-ellipsis-together/

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -23,11 +23,12 @@ $alpine-cell-border-radius:                       0 !default;
 $alpine-cell-border-width:                        0 0 1px 0 !default;
 $alpine-cell-selected-color:                      $alpine-font-color !default;
 $alpine-cell-selected-bg-color:                   darken($alpine-row-mouse-hover-color, 4%) !default;
-$alpine-cell-display:                             inline-flex !default;
+$alpine-cell-display:                             block !default;
 $alpine-cell-align-items:                         center !default;
 $alpine-cell-justify-content:                     flex-start !default;
 $alpine-cell-padding:                             2px 4px !default;
 $alpine-cell-active-box-shadow:                   inset 0 0 0 1px #5da6e3 !default;
+$alpine-cell-text-overflow:                       ellipsis !default;
 
 // Grid Headers
 $alpine-header-display:                           inline-flex !default;
